--- a/src/MetricsToolWindow.form
+++ b/src/MetricsToolWindow.form
@@ -94,7 +94,7 @@
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
-            <border type="none" title="on files"/>
+            <border type="none" title="on file"/>
             <children>
               <component id="29422" class="javax.swing.JCheckBox" binding="lineOfCodeCheckBox" default-binding="true">
                 <constraints>
