--- a/src/toolWindow/gui/MetricsToolWindow.form
+++ b/src/toolWindow/gui/MetricsToolWindow.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="MetricsToolWindowForm">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="toolWindow.gui.MetricsToolWindowForm">
   <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridBagLayout">
     <constraints>
       <xy x="20" y="20" width="480" height="568"/>
