--- a/src/configuration/gui/Settings.form
+++ b/src/configuration/gui/Settings.form
@@ -94,7 +94,7 @@
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
-        <border type="none" title="Recompute Metrics every:"/>
+        <border type="none" title="Metrics computation"/>
         <children>
           <component id="5b836" class="javax.swing.JLabel">
             <constraints>
@@ -181,7 +181,7 @@
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
-        <border type="none" title="Project Settings:"/>
+        <border type="none" title="Project Settings"/>
         <children>
           <component id="366bb" class="javax.swing.JLabel">
             <constraints>
